align righ fixed

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -1,5 +1,7 @@
 .post-header {
     margin-bottom: $vertical-spacing-unit;
+	align: right;
+	padding-right: 10px;
 }
 .post-list {
     margin: 0;
